--- a/.github/workflows/master_fatal-tigers.yml
+++ b/.github/workflows/master_fatal-tigers.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy JAR app to Azure Web App - FATAL-TIGERS
 
 on:
@@ -11,27 +8,23 @@ on:
 
 jobs:
   build:
-   uses: actions/setup-java@v4
+    runs-on: windows-latest
+
+    permissions:
+      contents: read  # This is required for actions/checkout
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'microsoft'
- - name: Build with Maven
-        run: mvn clean installruns-on: windows-latest
-permissions:
-  contents: read  # This is required for actions/checkout
 
-steps:
-  - name: Checkout code
-    uses: actions/checkout@v4
-
-  - name: Set up JDK 11
-    uses: actions/setup-java@v2
-    with:
-      java-version: '11'  # You can specify the version of Java you want
-      distribution: 'adoptopenjdk'  # Or use 'zulu', 'temurin', or other distributions
-
-  # Add additional steps here as needed, for example, building or testing the project
-
+      - name: Build with Maven
+        run: mvn clean install
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -45,16 +38,17 @@ steps:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write  # Required for requesting the JWT
+      contents: read  # This is required for actions/checkout
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: java-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -69,4 +63,3 @@ steps:
           app-name: 'FATAL-TIGERS'
           slot-name: 'Production'
           package: '*.jar'
-          
